Enable exports detection

--- a/.reflame.config.jsonc
+++ b/.reflame.config.jsonc
@@ -43,6 +43,9 @@
       },
       "nodejsCompatibility": {
         "packageJson": true,
+        "exportsDetection": {
+          "ignoreTopLevelDirectory": true
+        },
       }
     }
   },
